# metaservice

./: Cargo.toml  rustfmt.toml
src/: main.rs
