[package]
name = "metaservice"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
metascraper = "0.2.2"
moka = { version = "0.12.10", features = ["future"] }
reqwest = "0.12.19"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_derive = "1.0.219"
